added swagger doc
